--- a/.verbrc.md
+++ b/.verbrc.md
@@ -2,7 +2,7 @@
 
 > {%= description %}
 
-We're just getting started here, **we'd love to see pull requests for other types of documentation** and for any kind of project!
+Pull requests welcome!
 
 ## Getting Started
 
