--- a/.verb.md
+++ b/.verb.md
@@ -19,11 +19,7 @@ Pull requests welcome!
 {%= docs("options") %}
 
 ## Author
-
-**Jon Schlinkert**
-
-+ [github/jonschlinkert](http://github.com/jonschlinkert)
-+ [twitter/jonschlinkert](https://twitter.com/jonschlinkert)
+{%= include("author") %}
 
 ## License
 {%= copyright() %}
